--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-
-users.json
+json/*
 # Created by https://www.gitignore.io/api/flask,python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=flask,python,visualstudiocode
 
@@ -172,3 +171,4 @@ dmypy.json
 .history
 
 # End of https://www.gitignore.io/api/flask,python,visualstudiocode
+users.json
