--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-
-users.json
+json/*
 # Created by https://www.gitignore.io/api/flask,python,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=flask,python,visualstudiocode
 
